--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,19 +16,22 @@ services:
       - WG_HOST=91.132.161.112   # публичный IP сервера
       - WG_PORT=51888                # UDP порт
       - PORT=51821                   # TCP веб-интерфейс
-      - WG_DEFAULT_ADDRESS=10.10.0.1
+
+      - WG_DEFAULT_ADDRESS=91.132.161.112
+      - WG_DEFAULT_DNS=1.1.1.1,8.8.8.8
+      - WG_ALLOWED_IPS=0.0.0.0/0
       - WG_NETWORK=10.10.0.0/24
-      - DNS=1.1.1.1,8.8.8.8
+      - DNS=1.1.1.1
       - WG_MTU=1280
       - WG_PERSISTENT_KEEPALIVE=25
-      - MAX_CLIENTS=10
-#    ports:
-#      - "51888:51888/udp"
-#      - "51821:51821/tcp"
+      - MAX_CLIENTS=256
+    # ports:
+    #   - "51888:51888/udp"
+    #   - "51821:51821/tcp"
     restart: unless-stopped
     volumes:
-#      - ./amneziawg-data:/etc/amneziawg
       - ./config:/etc/wireguard
+      # - ./amneziawg-data:/app/data
 
   mysql:
     image: mysql:8.0
@@ -74,3 +77,4 @@ services:
 volumes:
   mysql_data:
   redis_data:
+  amneziawg-data:
