--- a/docker/amneziawg/docker-compose.yml
+++ b/docker/amneziawg/docker-compose.yml
@@ -72,6 +72,19 @@ services:
     networks:
       - backend
 
+  x-ui:
+    image: ghcr.io/mhsanaei/3x-ui:latest
+    container_name: x-ui
+    restart: unless-stopped
+    network_mode: host
+    environment:
+      - XRAY_VMESS_AEAD_FORCED=false
+    volumes:
+      - ./x-ui-data:/etc/x-ui
+      - ./x-ui-cert:/root/cert
+    cap_add:
+      - NET_ADMIN
+
 volumes:
   mysql_data:
   redis_data:
